eZ Online Editor 5.0 extension Changelog

5.0rc2
* Cleaned up i18n use and Nor-NO, and synced untranslated.ts with the Nor-NO file.
* Language for TinyMCE now uses Locale from site ini instead of locale from xml attribute.
* Fixed: Some strings in table dialog where not using i18n().
* Show more editor frindly names on xml tags in path ( tr -> table row )
* Fixed #013402: OE problem if ezxmlfield is required /empty andAdd object (objectrelation) is clicked
* Only allow image selections in browse and bookmark node lists when image button is pressed
* Fixed regression in image popup: search did not filter on image classes
* Added workaround for #013013 (Link with anchor removed on re-edit) in Internet Explorer

5.0rc
* Fixed #013320: (Development mode doesn't work fully)
* Removed CustomAttributeStyleMap since it caused embed / embed-inline tags to be converted 
 to a font tag by the browser if you for instance used 'color' style for text-color.
* Added CompatibilityMode in ezoe.ini to make editor behave like OE 4.x in respect to embed tags
  (attachment icons)
* Added bookmarks tab in upload dialog
* Stop tinyMCE from triyng to load i18n script a second time (unvanted 404).
* Fixed: Extra paragraphs in literal tags if double line feeds where used.
* Updated TinyMCE to 3.1.1 (trunk), fixes several issues in Opera
* Fixed bug #013011: Opera doesn't allow to make embedded object as link
* Added Norwegian translation
* Fixed #013178: Duplicate embed object when I change "paragraph" to "title"
* Implemented #013368: Include image size attributes in the editor-created image tags
* Made it more clear that anchors are content less, and set anchor name to slected text on init


5.0Beta4
* Fixed bug #013151: No nice URLs with ezoe
* Append paragraph if custom / embed tag is inserted as last tag in editor
* reworked custom attribute settings in content.ini to be more streamlined.
* tags in description / caption field didn't work as intended (strip tags used)