@@ -4,11 +4,13 @@ eZ Online Editor 5.0 extension Changelog
 * Cleaned up i18n use and Nor-NO, and synced untranslated.ts with the Nor-NO file.
 * Language for TinyMCE now uses Locale from site ini instead of locale from xml attribute.
 * Fixed: Some strings in table dialog where not using i18n().
-* Show more editor frindly names on xml tags in path ( tr -> table row )
+* Show more editor friendly names on xml tags in path ( tr -> table row )
 * Fixed #013402: OE problem if ezxmlfield is required /empty andAdd object (objectrelation) is clicked
 * Only allow image selections in browse and bookmark node lists when image button is pressed
 * Fixed regression in image popup: search did not filter on image classes
 * Added workaround for #013013 (Link with anchor removed on re-edit) in Internet Explorer
+* Added Validation for deleted embed objects on publish
+  partly fixing #013391: ezoe handles removed images incorrect
 
 5.0rc
 * Fixed #013320: (Development mode doesn't work fully)
